[metadata]
name = verto
version = attr: verto.__version__
description = Verto is an extension of the Python Markdown package, which allows authors to include complex HTML elements with simple text tags in their Markdown.
long_description = file: README.rst, LICENSE.rst
author = University of Canterbury Computer Science Education Research Group
author_email = csse-education-research@canterbury.ac.nz
keywords =
    markdown
    verto
    development
    textbook
    converter
    media
    richtext
    interactive
    education
    html
    book
    author
    extension
license = MIT
license_files = LICENSE.md
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: Text Processing :: Markup
    Topic :: Text Processing :: Markup :: HTML
project_urls =
    Issue Tracker = https://github.com/uccser/verto/issues
    Documentation = https://verto.readthedocs.io/en/latest/
    Changelog = http://verto.readthedocs.io/en/latest/changelog.html
    Source Code = https://github.com/uccser/verto

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    markdown==2.6.11
    Jinja2==3.0.1
    python-slugify==5.0.2
